force-app/main/default/objects/Course__c/fields/Mode_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Training__c</fullName>
    <label>Mode of Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>