force-app/main/default/objects/Course__c/validationRules/Could_not_edit_fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Could_not_edit_fee</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Fees__c)</errorConditionFormula>
    <errorDisplayField>Fees__c</errorDisplayField>
    <errorMessage>&quot;You are not allowed to edit the Fee field.&quot;</errorMessage>
</ValidationRule>