force-app/main/default/objects/Course__c/validationRules/Course_can_be_changed_to_other_modes.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_can_be_changed_to_other_modes</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(AND(
    NOT(ISNEW()),
    ISPICKVAL(Mode_of_Training__c, &quot;Offline&quot;)  ||  ISPICKVAL( Mode_of_Training__c , &quot;Fast Track&quot;) 
))</errorConditionFormula>
    <errorDisplayField>Mode_of_Training__c</errorDisplayField>
    <errorMessage>You can mention Offline &amp; Fast Track</errorMessage>
</ValidationRule>