force-app/main/default/objects/Course__c/validationRules/Course_greater_than_5000.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_greater_than_5000</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISNEW() ,  Not(ISPICKVAL( Mode_of_Training__c , &quot;Online&quot;)) ,  ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Fees__c</errorDisplayField>
    <errorMessage>fees must be greater than 5000</errorMessage>
</ValidationRule>