force-app/main/default/objects/Course__c/validationRules/Dont_allow_to_change_course_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_allow_to_change_course_name</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(AND(
    ISNEW(),
    ISPICKVAL(Mode_of_Training__c, &quot;Online&quot;)
))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>&quot;You are not allowed to change the Course Name for a new course created. The Mode of Training must be set to Online.&quot;</errorMessage>
</ValidationRule>