force-app/main/default/objects/Course__c/validationRules/Price_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_should_not_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Fees__c )</errorConditionFormula>
    <errorDisplayField>Fees__c</errorDisplayField>
    <errorMessage>&quot;The Course Price field cannot be blank or empty.&quot;</errorMessage>
</ValidationRule>