force-app/main/default/objects/Course__c/validationRules/start_date_should_greater_than_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_should_greater_than_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Start_Date__c &lt;= End_Date__c)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>End Date should be greater than start</errorMessage>
</ValidationRule>